Implement resource bundle, provide base for internationalization.